@@ -6,4 +6,5 @@ perl:
   - "5.16"
   - "5.18"
   - "5.20"
-
+  - "5.22"
+  - "5.24"
