@@ -5,7 +5,6 @@ requires 'Scalar::Util';
 
 on 'test' => sub {
     requires 'File::Temp';
-    requires 'File::Touch';
     requires 'Test::Exception';
     requires 'Test::More', '0.98';
 };
